--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
 
       <section id="main-content" class="clearfix">
         
-        <article id="intro" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/didubg2.jpg">
+        <article id="intro" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/didubg2_1.jpg">
           <div class="content-wrapper clearfix wow fadeInDown" data-wow-delay="0.3s">
             <div class="col-sm-10 col-md-9 pull-right">
 
                 <section class="feature-text">
-                  <h1>欢迎光临</h1>
+                  <h1>Smartbet</h1>
+                  <h1>体验版下载</h1>
                   <p><a href="#ios" class="link-scroll btn btn-outline-inverse btn-lg">下载iOS版本</a></p>
                   <p><a href="#android" class="link-scroll btn btn-outline-inverse btn-lg">下载Android版本</a></p>
                 </section>
@@ -82,7 +83,7 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="ios" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/didubg2.jpg">
+        <article id="ios" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/didubg2_1.jpg">
           <div class="content-wrapper clearfix">
             <div class="col-sm-10 col-md-9 pull-right">
 
@@ -90,14 +91,14 @@
 
                 <p class="feature-paragraph"><img data-img-src="assets/images/other_images/apple.png" class="lazy pull-right" alt="Lorem Ipsum"></p>
                 <h4>最佳游戏体验，建议使用iOS 9 或以上的版本</h4>
-                <p><a href="itms-services://?action=download-manifest&amp;url=https://github.com/iantuan/iantuan.github.io/raw/master/manifest.plist" class="btn btn-outline-inverse btn-sm">按我開始下載</a></p>
+                <p><a href="itms-services://?action=download-manifest&amp;url=https://github.com/iantuan/iantuan.github.io/raw/master/manifest.plist" class="btn btn-outline-inverse btn-lg">開始下載</a></p>
 
             </div><!-- .col-sm-10 -->
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
 
-        <article id="android" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/didubg2.jpg">
+        <article id="android" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/didubg2_1.jpg">
           <div class="content-wrapper clearfix">
             <div class="col-sm-10 col-md-9 pull-right">
 
@@ -105,7 +106,7 @@
 
                 <p class="feature-paragraph"><img data-img-src="assets/images/other_images/android.png" class="lazy pull-right" alt="Lorem Ipsum"></p>
                 <h4>支持安卓4.0或以上的版本</h4>
-                <p><a href="itms-services://?action=download-manifest&amp;url=https://github.com/iantuan/iantuan.github.io/raw/master/manifest.plist" class="btn btn-outline-inverse btn-sm">按我開始下載</a></p>
+                <p><a href="itms-services://?action=download-manifest&amp;url=https://github.com/iantuan/iantuan.github.io/raw/master/manifest.plist" class="btn btn-outline-inverse btn-lg">開始下載</a></p>
 
             </div><!-- .col-sm-10 -->
           </div><!-- .content-wrapper -->
